# ttypr

./: Cargo.toml  LICENSE  README.md  words.txt
src/: app.rs  input.rs  lib.rs  main.rs  ui.rs  utils.rs
