[package]
name = "ttypr"
version = "0.2.4"
edition = "2024"
description = "terminal typing practice"
license = "MIT"
repository = "https://github.com/hotellogical05/ttypr"
keywords = ["tui", "terminal", "typing", "practice", "tutor"]

[dependencies]
ratatui = "0.29.0"
crossterm = "0.28.1"
color-eyre = "0.6.4"
rand = "0.9.1"
home = "0.5.9"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
