[package]
name = "ttypr"
version = "0.3.1"
edition = "2024"
description = "terminal typing practice"
license = "MIT"
repository = "https://github.com/hotellogical05/ttypr"
keywords = ["tui", "terminal", "ratatui", "typing", "practice"]

[dependencies]
ratatui = "0.29.0"
crossterm = "0.28.1"
color-eyre = "0.6.5"
rand = "0.9.1"
home = "0.5.9"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
sha2 = "0.10.9"
