[package]
name = "ttypr"
version = "0.3.6"
edition = "2024"
description = "terminal typing practice"
license = "MIT"
repository = "https://github.com/hotellogical05/ttypr"
keywords = ["tui", "terminal", "ratatui", "typing", "practice"]

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
color-eyre = "0.6.5"
rand = "0.9.2"
home = "0.5.12"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"
sha2 = "0.10.9"

[dev-dependencies]
tempfile = "3.24.0"
